<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="ifRoom"
        android:title="@string/search" />
    <item
        android:id="@+id/menu_player"
        android:showAsAction="never"
        android:title="@string/menu_player" />
    <item
        android:id="@+id/menu_scan"
        android:showAsAction="never"
        android:title="@string/menu_scan" />
    <item
        android:id="@+id/menu_account"
        android:showAsAction="never"
        android:title="@string/menu_account" />
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/settings" />
</menu>
